fixed-code-after-pull-and-the-spacing

--- a/style.css
+++ b/style.css
@@ -3,82 +3,56 @@
 @import url("https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@400;900&display=swap");
 
 * {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 body {
-  width: 62.5rem;
-  height: 187rem;
-  margin: auto;
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: [line1] 34rem [line2] 3.563rem [line3] 38.25rem [line4] 42.5rem [line5] 42.5rem [line6] 25.5rem [line7];
-}
-
-/*color*/
-.red {
-  background-color: #f17949;
-}
-.yellow {
-  background-color: #ffb939;
-}
-.blue {
-  background-color: #c7ddea;
+    width: 62.5rem;
+    height: 187rem;
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: [line1] 34rem [line2] 3.563rem [line3] 38.25rem [line4] 42.5rem [line5] 42.5rem [line6] 25.5rem [line7];
 }
 
 /*header*/
 header {
-  grid-area: 1/1/2/-1;
-  display: flex;
+    grid-area: 1/1/2/-1;
+    display: flex;
 }
 
 .header-section {
-  width: 31.25rem;
-  height: 34rem;
-  display: flex;
-  flex-direction: column;
+    width: 31.25rem;
+    height: 34rem;
+    display: flex;
+    flex-direction: column;
 }
-.header-section-text1 {
-  width: 19.625rem;
-  height: 6.313rem;
-  margin-left: 6.563rem;
-  margin-top: 4.438rem;
-}
+
 .header-section1 {
-  width: 31.25rem;
-  height: 34rem;
-  display: flex;
-  flex-direction: column;
-  background-color: #C7DDEA;
+    width: 31.25rem;
+    height: 34rem;
+    background-color: #C7DDEA;
 
-  display: grid;
-  grid-template-columns: [line1] 6.563rem [line2] 5.812rem [line3] 2.375rem [line4] 8.563rem [line5] 2.875rem [line6] 4.062rem [line7] 1rem [line8];
-  grid-template-rows: [line1] 4.438rem [line2] 6.313rem [line3] 5.812rem [line4] 0.626rem [line5] 3.186rem [line6] 2.438rem [line7] 11.187rem [line8];
+    display: grid;
+    grid-template-columns: [line1] 6.563rem [line2] 5.812rem [line3] 2.375rem [line4] 8.563rem [line5] 2.875rem [line6] 4.062rem [line7] 1rem [line8];
+    grid-template-rows: [line1] 4.438rem [line2] 6.313rem [line3] 5.812rem [line4] 0.626rem [line5] 3.186rem [line6] 2.438rem [line7] 11.187rem [line8];
 }
+
 .header-section-text1 {
-  width: 19.625rem;
-  height: 6.313rem;
-  grid-area: 2/2/6/3;
+    width: 19.625rem;
+    height: 6.313rem;
+    grid-area: 2/2/6/3;
 
-  font-family: "Frank Ruhl Libre", serif;
-  font-weight: 900;
-  font-size: 2.813rem;
-  line-height: 2.813rem;
-  color: #000000;
+    font-family: "Frank Ruhl Libre", serif;
+    font-weight: 900;
+    font-size: 2.813rem;
+    line-height: 2.813rem;
+    color: #000000;
 }
+
 .header-section-text2 {
-  width: 16.75rem;
-  height: 6.438rem;
-  margin-left: 6.563rem;
-
-  font-family: "Fira Sans", sans-serif;
-  font-weight: 500;
-  font-size: 0.875rem;
-  line-height: 1.5rem;
-  color: #00000090;
-
     width: 16.75rem;
     height: 6.438rem;
     grid-area: 3/2/5/5;
@@ -90,17 +64,11 @@ header {
     color: #000000;
     opacity: 60%;
 }
+
 .header-text-span {
-  color: #ffffff;
+    color: #ffffff;
 }
-button {
-  margin-top: 3.188rem;
-  margin-left: 6.563rem;
-  width: 8.188rem;
-  height: 2.438rem;
-  border-radius: 6.25rem;
-  border: 0;
-  background-color: #ffffff;
+
 .header-button {
     grid-area: 6/2/7/4;
     width: 8.188rem;
@@ -113,23 +81,10 @@ button {
     font-weight: 700;
     font-size: 0.625rem;
     color: #000000CC;
-    box-shadow: 0px 2px 0px 0px #0000001A;
-
-  font-family: "Fira Sans", sans-serif;
-  font-weight: 700;
-  font-size: 0.625rem;
-  color: #000000cc;
-  box-shadow: 0px 2px 0px 0px #0000001a;
+    box-shadow: 0 0.125rem 0 0 #0000001A;
 }
+
 .img-family {
-  width: 17.875rem;
-  height: 17.438rem;
-  position: absolute;
-  left: 0;
-  top: 0;
-  z-index: 1;
-  margin-top: 16.562rem;
-  margin-left: 15.3rem;
     width: 17.875rem;
     height: 17.438rem;
     grid-area: 4/3/-1/7;
@@ -138,43 +93,41 @@ button {
 .header-section2 {
     width: 31.25rem;
     height: 34rem;
-    display: flex;
-    flex-direction: column;
     background-color: #C7DDEA;
 
     display: grid;
     grid-template-columns: repeat(6, 5.208rem);
     grid-template-rows: repeat(6, 5.666rem);
 }
+
 .header-article {
   width: 31.25rem;
   height: 17rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
+
 .header-red {
     background-color: #F17949;
     grid-area: 1/1/-1/4;
+
+    /*text*/
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
+
 .header-yellow {
     background-color: #FFB939;
     grid-area: 4/1/-1/-1;
+
+    /*text*/
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
+
 .header-article-text1 {
-  width: 15.625rem;
-  height: 1.063rem;
-
-  font-family: "Fira Sans", sans-serif;
-  font-weight: 700;
-  font-size: 0.688rem;
-  line-height: 0.825rem;
-  color: #00000080;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
     width: 15.625rem;
     height: 1.063rem;
 
@@ -187,8 +140,8 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
-
 }
+
 .header-article-text2 {
   width: 15.625rem;
   height: 2.563rem;
@@ -207,6 +160,7 @@ nav {
   display: flex;
   justify-content: center;
 }
+
 .nav-text {
   width: 10.438rem;
   height: 3.563rem;
@@ -220,6 +174,7 @@ nav {
   justify-content: center;
   align-items: center;
 }
+
 .nav-text2 {
   opacity: 40%;
 }
@@ -241,7 +196,6 @@ main {
 }
 
 /* section3 */
-
 .section3 {
   background-color: #fab131;
   width: 62.625rem;
@@ -338,6 +292,7 @@ main {
   align-self: center;
   margin-top: 1.875rem;
 }
+
 .mainImg1 {
   height: 9.875rem;
   width: auto;
@@ -470,16 +425,10 @@ main {
 
 /*footer*/
 footer {
-  background-color: rgb(184, 184, 184);
-  grid-area: 6/1/7/-1;
-
-  /*text*/
-  display: flex;
-  justify-content: center;
-  align-items: center;
     background-color: #777574;
     grid-area: 6/1/7/-1;
 }
+
 .section-up {
     width: 62.5rem;
     height: 4.25rem;
@@ -489,10 +438,12 @@ footer {
     justify-content: center;
     align-items: center;
 }
+
 .img-chevrons {
     width: 2rem;
     height: 2rem;
 }
+
 .footer-text {
     width: 15.938rem;
     height: 1.938rem;
